small tweaks and some reporting

--- a/test/nextflow.config
+++ b/test/nextflow.config
@@ -1,3 +1,24 @@
 docker {
     enabled = true
 }
+
+report {
+    enabled = true
+    file = 'reports/report.html'
+}
+
+timeline {
+    enabled = true
+    file = 'reports/timeline.html'
+}
+
+dag {
+    enabled = true
+    file = 'reports/dag.html'
+}
+
+trace {
+    enabled = true
+    file = 'reports/trace.txt'
+    fields = 'task_id,process,tag,name,status,cpus,memory,duration,realtime,exit'
+}
